--- a/styles.css
+++ b/styles.css
@@ -23,11 +23,6 @@ a:visited {
   text-decoration: none;
 }
 
-i:hover {
-  color: #99ffef;
-  transition: 0.2s;
-}
-
 html {
   scroll-behavior: smooth;
 }
@@ -68,8 +63,9 @@ html {
 
 .about {
   text-align: center;
-  width: 90%;
+  width: 100%;
   margin: 0 auto;
+  overflow: hidden;
 }
 .about__h2 {
   font-family: "Unica One", "sans-serif";
@@ -78,10 +74,10 @@ html {
 }
 .about__container {
   display: flex;
-  margin-top: 2rem;
+  margin: 1rem 1rem 0 1rem;
   justify-content: space-between;
 }
-.about__image {
+.about__myImage {
   width: 6rem;
   box-shadow: -0.08rem 0.08rem black;
   border-radius: 0.3rem;
@@ -93,21 +89,59 @@ html {
   width: 70%;
   padding-top: 1rem;
 }
+.about #blue-planet {
+  position: relative;
+  width: 15rem;
+  right: 7rem;
+  top: 1rem;
+}
 
 .techStack {
+  margin-top: 2rem;
+}
+.techStack__h2 {
+  text-align: center;
+  font-family: "Unica One", "sans-serif";
+  letter-spacing: 0.3rem;
+  text-shadow: -0.04rem 0.04rem black;
+}
+.techStack__container {
   display: flex;
-  width: 100%;
-  font-size: 50px;
+  width: 80%;
+  font-size: 3.125rem;
   justify-content: center;
   align-items: center;
-  margin-bottom: 90px;
+  margin: 1rem auto 0 auto;
 }
 .techStack__icon {
   display: flex !important;
-  width: 100px;
-  height: 75px;
+  min-width: 6rem;
   justify-content: center;
   color: white;
   align-items: center;
   margin: 0 20 0 20;
+}
+.techStack #HTML:hover {
+  color: #f06529;
+  transition: 0.2s;
+}
+.techStack #CSS:hover {
+  color: #2965f1;
+  transition: 0.2s;
+}
+.techStack #JavaScript:hover {
+  color: #f7e018;
+  transition: 0.2s;
+}
+.techStack #Sass:hover {
+  color: #cf649a;
+  transition: 0.2s;
+}
+.techStack #React:hover {
+  color: #5dd0f0;
+  transition: 0.2s;
+}
+.techStack #Java:hover {
+  color: #ed8b00;
+  transition: 0.2s;
 }
