--- a/tech.scss
+++ b/tech.scss
@@ -1,18 +1,58 @@
 .techStack {
-  display: flex;
-  width: 100%;
-  font-size: 50px;
-  justify-content: center;
-  align-items: center;
-  margin-bottom: 90px;
+  margin-top: 2rem;
+
+  &__h2 {
+    text-align: center;
+    font-family: $font-display;
+    letter-spacing: 0.3rem;
+    text-shadow: -0.04rem 0.04rem black;
+  }
+
+  &__container {
+    display: flex;
+    width: 80%;
+    font-size: 3.125rem;
+    justify-content: center;
+    align-items: center;
+    margin: 1rem auto 0 auto;
+  }
 
   &__icon {
     display: flex !important;
-    width: 100px;
-    height: 75px;
+    min-width: 6rem;
     justify-content: center;
     color: white;
     align-items: center;
     margin: 0 20 0 20;
+  }
+
+  #HTML:hover {
+    color: rgb(240, 101, 41);
+    transition: 0.2s;
+  }
+
+  #CSS:hover {
+    color: rgb(41, 101, 241);
+    transition: 0.2s;
+  }
+
+  #JavaScript:hover {
+    color: rgb(247, 224, 24);
+    transition: 0.2s;
+  }
+
+  #Sass:hover {
+    color: rgb(207, 100, 154);
+    transition: 0.2s;
+  }
+
+  #React:hover {
+    color: rgb(93, 208, 240);
+    transition: 0.2s;
+  }
+
+  #Java:hover {
+    color: rgb(237, 139, 0);
+    transition: 0.2s;
   }
 }
