--- a/styles.css
+++ b/styles.css
@@ -61,6 +61,43 @@ html {
   width: 80%;
 }
 
+@media screen and (min-device-width: 1024px) {
+  .landing {
+    font-family: "Unica One", "sans-serif";
+    margin-bottom: -10rem;
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    width: 100%;
+    overflow: hidden;
+  }
+  .landing__h1 {
+    font-size: 10rem;
+    letter-spacing: 0.7rem;
+    text-shadow: -0.25rem 0.25rem black;
+    margin-top: 11rem;
+  }
+  .landing__h2 {
+    text-shadow: -0.15rem 0.15rem black;
+    letter-spacing: 0.4rem;
+    font-size: 3rem;
+  }
+  .landing__image {
+    z-index: -1;
+  }
+  .landing #comet {
+    position: relative;
+    top: 3rem;
+    left: 3rem;
+    width: 35%;
+  }
+  .landing #big-planet {
+    position: relative;
+    bottom: 15rem;
+    left: 69rem;
+    width: 27%;
+  }
+}
 .about {
   text-align: center;
   width: 100%;
@@ -96,6 +133,39 @@ html {
   top: 1rem;
 }
 
+@media screen and (min-device-width: 1024px) {
+  .about__h2 {
+    text-shadow: -0.15rem 0.15rem black;
+    letter-spacing: 0.4rem;
+    font-size: 3rem;
+    width: 75%;
+  }
+  .about__container {
+    display: flex;
+    width: 75%;
+    margin: 2rem 0 2rem 7rem;
+    justify-content: left;
+  }
+  .about__myImage {
+    width: 11rem;
+    box-shadow: -0.1rem 0.1rem black;
+    border-radius: 0.6rem;
+  }
+  .about__p {
+    font-family: "Oxanium";
+    text-align: justify;
+    font-size: 1.4rem;
+    width: 60%;
+    padding: 2rem 1.3rem 1.3rem 2rem;
+  }
+  .about #blue-planet {
+    position: relative;
+    width: 25rem;
+    top: 3rem;
+    right: 30rem;
+    z-index: -1;
+  }
+}
 .techStack {
   margin-top: 2rem;
 }
@@ -153,6 +223,65 @@ html {
   z-index: -1;
 }
 
+@media screen and (min-device-width: 1024px) {
+  .techStack {
+    position: relative;
+    margin-top: 8rem;
+    bottom: 27rem;
+    left: 18rem;
+    width: 70%;
+  }
+  .techStack__h2 {
+    position: relative;
+    left: 15.5rem;
+    text-shadow: -0.15rem 0.15rem black;
+    letter-spacing: 0.4rem;
+    font-size: 3rem;
+  }
+  .techStack__container {
+    display: flex;
+    font-size: 5rem;
+    justify-content: right;
+    align-items: center;
+    margin: 2rem auto 0 auto;
+    padding-bottom: 1rem;
+  }
+  .techStack__icon {
+    min-width: 6rem;
+    color: white;
+    margin: 0 3rem;
+  }
+  .techStack #HTML:hover {
+    color: #f06529;
+    transition: 0.2s;
+  }
+  .techStack #CSS:hover {
+    color: #2965f1;
+    transition: 0.2s;
+  }
+  .techStack #JavaScript:hover {
+    color: #f7e018;
+    transition: 0.2s;
+  }
+  .techStack #Sass:hover {
+    color: #cf649a;
+    transition: 0.2s;
+  }
+  .techStack #React:hover {
+    color: #5dd0f0;
+    transition: 0.2s;
+  }
+  .techStack #Java:hover {
+    color: #ed8b00;
+    transition: 0.2s;
+  }
+  .techStack #saturn-1 {
+    position: relative;
+    width: 15rem;
+    left: 17rem;
+    z-index: -1;
+  }
+}
 .work {
   display: flex;
   flex-direction: column;
