--- a/landing.scss
+++ b/landing.scss
@@ -37,3 +37,47 @@
     width: 80%;
   }
 }
+
+@media screen and (min-device-width: 1024px) {
+  .landing {
+    font-family: $font-display;
+    margin-bottom: -10rem;
+
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    width: 100%;
+    overflow: hidden;
+
+    &__h1 {
+      font-size: 10rem;
+      letter-spacing: 0.7rem;
+      text-shadow: -0.25rem 0.25rem black;
+      margin-top: 11rem;
+    }
+
+    &__h2 {
+      text-shadow: -0.15rem 0.15rem black;
+      letter-spacing: 0.4rem;
+      font-size: 3rem;
+    }
+
+    &__image {
+      z-index: -1;
+    }
+
+    #comet {
+      position: relative;
+      top: 3rem;
+      left: 3rem;
+      width: 35%;
+    }
+
+    #big-planet {
+      position: relative;
+      bottom: 15rem;
+      left: 69rem;
+      width: 27%;
+    }
+  }
+}
