--- a/tech.scss
+++ b/tech.scss
@@ -70,12 +70,10 @@
     position: relative;
     margin-top: 8rem;
     bottom: 27rem;
-    left: 18rem;
-    width: 70%;
+    left: 47rem;
+    width: fit-content;
 
     &__h2 {
-      position: relative;
-      left: 15.5rem;
       text-shadow: -0.15rem 0.15rem black;
       letter-spacing: 0.4rem;
       font-size: 3rem;
