--- a/about.scss
+++ b/about.scss
@@ -41,16 +41,17 @@
 @media screen and (min-device-width: 1024px) {
   .about {
     &__h2 {
+      position: relative;
+      right: 11rem;
       text-shadow: -0.15rem 0.15rem black;
       letter-spacing: 0.4rem;
       font-size: 3rem;
-      width: 75%;
     }
 
     &__container {
       display: flex;
-      width: 75%;
-      margin: 2rem 0 2rem 7rem;
+      width: fit-content;
+      margin: 2rem 0 2rem 10rem;
       justify-content: left;
     }
 
@@ -64,7 +65,7 @@
       font-family: "Oxanium";
       text-align: justify;
       font-size: 1.4rem;
-      width: 60%;
+      width: 50%;
       padding: 2rem 1.3rem 1.3rem 2rem;
     }
 
