--- a/styles.scss
+++ b/styles.scss
@@ -5,7 +5,5 @@
 @import "./work.scss";
 @import "./contact.scss";
 
-@import url('https://fonts.googleapis.com/css2?family=Bellota+Text:wght@700&family=Comfortaa:wght@700&family=Oxanium:wght@700&family=Unica+One&display=swap');
-@import url("https://fonts.googleapis.com/css2?family=Monoton&family=Roboto&display=swap");
-@import url('https://fonts.googleapis.com/css2?family=Coda&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Oxanium&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Bellota+Text:wght@700&family=Comfortaa:wght@700&family=Oxanium:wght@700&family=Unica+One&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Oxanium&display=swap");
