--- a/work.scss
+++ b/work.scss
@@ -26,3 +26,35 @@
     margin-top: -5rem;
   }
 }
+
+@media screen and (min-device-width: 1024px) {
+  .work {
+    display: flex;
+    flex-direction: column;
+
+    &__h2 {
+      text-align: center;
+      font-family: $font-display;
+      font-size: 3rem;
+      letter-spacing: 0.7rem;
+      text-shadow: -0.15rem 0.15rem black;
+      margin-bottom: 2rem;
+    }
+
+    &__project {
+      width: 60%;
+      height: 10rem;
+      background-color: rgba(255, 255, 255, 0.2);
+      margin: 0 auto 1rem auto;
+    }
+
+    &__image {
+      position: relative;
+      top: 5rem;
+      left: 0.5rem;
+      width: 95%;
+      z-index: -1;
+      margin-top: -5rem;
+    }
+  }
+}
