--- a/landing.scss
+++ b/landing.scss
@@ -23,6 +23,10 @@
     z-index: -1;
   }
 
+  #saturn-1 {
+    display: none;
+  }
+
   #comet {
     position: relative;
     bottom: 12rem;
@@ -41,16 +45,17 @@
 @media screen and (min-device-width: 1024px) {
   .landing {
     font-family: $font-display;
-    margin-bottom: -10rem;
-
     display: flex;
     flex-direction: column;
     text-align: center;
     width: 100%;
+    height: auto;
+    align-items: center;
     overflow: hidden;
+    margin-bottom: -25rem;
 
     &__h1 {
-      font-size: 10rem;
+      font-size: 9rem;
       letter-spacing: 0.7rem;
       text-shadow: -0.25rem 0.25rem black;
       margin-top: 11rem;
@@ -58,26 +63,35 @@
 
     &__h2 {
       text-shadow: -0.15rem 0.15rem black;
-      letter-spacing: 0.4rem;
+      letter-spacing: 0.7rem;
       font-size: 3rem;
+      margin-top: 1rem;
     }
 
     &__image {
       z-index: -1;
     }
 
-    #comet {
+    #saturn-1 {
+      display: flex;
+      width: 20%;
+      z-index: -2;
       position: relative;
-      top: 3rem;
-      left: 3rem;
-      width: 35%;
+      top: 5rem;
+      right: 35rem;
+    }
+
+    #comet {
+      display: none;
+      position: static;
+      width: 45%;
     }
 
     #big-planet {
       position: relative;
-      bottom: 15rem;
-      left: 69rem;
-      width: 27%;
+      bottom: 25rem;
+      left: 33rem;
+      width: 53%;
     }
   }
 }
