--- a/styles.css
+++ b/styles.css
@@ -46,6 +46,9 @@ html {
 .landing__image {
   z-index: -1;
 }
+.landing #saturn-1 {
+  display: none;
+}
 .landing #comet {
   position: relative;
   bottom: 12rem;
@@ -62,38 +65,48 @@ html {
 @media screen and (min-device-width: 1024px) {
   .landing {
     font-family: "Unica One", "sans-serif";
-    margin-bottom: -10rem;
     display: flex;
     flex-direction: column;
     text-align: center;
     width: 100%;
+    height: auto;
+    align-items: center;
     overflow: hidden;
+    margin-bottom: -25rem;
   }
   .landing__h1 {
-    font-size: 10rem;
+    font-size: 9rem;
     letter-spacing: 0.7rem;
     text-shadow: -0.25rem 0.25rem black;
     margin-top: 11rem;
   }
   .landing__h2 {
     text-shadow: -0.15rem 0.15rem black;
-    letter-spacing: 0.4rem;
+    letter-spacing: 0.7rem;
     font-size: 3rem;
+    margin-top: 1rem;
   }
   .landing__image {
     z-index: -1;
   }
-  .landing #comet {
+  .landing #saturn-1 {
+    display: flex;
+    width: 20%;
+    z-index: -2;
     position: relative;
-    top: 3rem;
-    left: 3rem;
-    width: 35%;
+    top: 5rem;
+    right: 35rem;
+  }
+  .landing #comet {
+    display: none;
+    position: static;
+    width: 45%;
   }
   .landing #big-planet {
     position: relative;
-    bottom: 15rem;
-    left: 69rem;
-    width: 27%;
+    bottom: 25rem;
+    left: 33rem;
+    width: 53%;
   }
 }
 .about {
@@ -136,7 +149,7 @@ html {
     position: relative;
     right: 11rem;
     text-shadow: -0.15rem 0.15rem black;
-    letter-spacing: 0.4rem;
+    letter-spacing: 0.7rem;
     font-size: 3rem;
   }
   .about__container {
@@ -147,7 +160,7 @@ html {
   }
   .about__myImage {
     width: 11rem;
-    box-shadow: -0.1rem 0.1rem black;
+    box-shadow: -0.15rem 0.15rem black;
     border-radius: 0.6rem;
   }
   .about__p {
@@ -158,11 +171,7 @@ html {
     padding: 2rem 1.3rem 1.3rem 2rem;
   }
   .about #blue-planet {
-    position: relative;
-    width: 25rem;
-    top: 3rem;
-    right: 30rem;
-    z-index: -1;
+    display: none;
   }
 }
 .techStack {
@@ -215,6 +224,9 @@ html {
   color: #ed8b00;
   transition: 0.2s;
 }
+.techStack #blue-planet {
+  display: none;
+}
 .techStack #saturn-1 {
   position: relative;
   width: 15rem;
@@ -226,13 +238,13 @@ html {
   .techStack {
     position: relative;
     margin-top: 8rem;
-    bottom: 27rem;
-    left: 47rem;
+    margin-bottom: -10rem;
+    left: 42rem;
     width: fit-content;
   }
   .techStack__h2 {
     text-shadow: -0.15rem 0.15rem black;
-    letter-spacing: 0.4rem;
+    letter-spacing: 0.7rem;
     font-size: 3rem;
   }
   .techStack__container {
@@ -272,11 +284,16 @@ html {
     color: #ed8b00;
     transition: 0.2s;
   }
-  .techStack #saturn-1 {
+  .techStack #blue-planet {
+    display: flex;
     position: relative;
-    width: 15rem;
-    left: 17rem;
+    width: 28rem;
+    bottom: 16rem;
+    right: 35rem;
     z-index: -1;
+  }
+  .techStack #saturn-1 {
+    display: none;
   }
 }
 .work {
@@ -305,6 +322,34 @@ html {
   margin-top: -5rem;
 }
 
+@media screen and (min-device-width: 1024px) {
+  .work {
+    display: flex;
+    flex-direction: column;
+  }
+  .work__h2 {
+    text-align: center;
+    font-family: "Unica One", "sans-serif";
+    font-size: 3rem;
+    letter-spacing: 0.7rem;
+    text-shadow: -0.15rem 0.15rem black;
+    margin-bottom: 2rem;
+  }
+  .work__project {
+    width: 60%;
+    height: 10rem;
+    background-color: rgba(255, 255, 255, 0.2);
+    margin: 0 auto 1rem auto;
+  }
+  .work__image {
+    position: relative;
+    top: 5rem;
+    left: 0.5rem;
+    width: 95%;
+    z-index: -1;
+    margin-top: -5rem;
+  }
+}
 .contact {
   text-align: center;
   margin-bottom: 1rem;
