--- a/work.scss
+++ b/work.scss
@@ -1,3 +1,15 @@
+$base-duration: 500ms;
+
+// Colors
+$color-1: #2c3e50;
+$color-2: #1abc9c;
+$color-3: #2ecc71;
+
+// Breakpoints
+$sm: new-breakpoint(min-width 320px);
+$med: new-breakpoint(min-width 768px);
+$lg: new-breakpoint(min-width 1024px);
+
 .work {
   display: flex;
   flex-direction: column;
@@ -39,6 +51,76 @@
       letter-spacing: 0.7rem;
       text-shadow: -0.15rem 0.15rem black;
       margin-bottom: 2rem;
+    }
+
+    &__projectCard {
+      margin: 0 auto;
+      position: relative;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      height: 275px;
+      width: 535px;
+      border-radius: 10px;
+      box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+      transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
+      overflow: hidden;
+      &:hover {
+        box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
+        img {
+          transform: scale(1.05);
+        }
+        figcaption {
+          bottom: 0;
+        }
+      }
+      &--img {
+        height: 100%;
+        transition: 0.25s;
+      }
+      &--caption {
+        position: absolute;
+        bottom: -60%;
+        left: 0;
+        width: 100%;
+        //height: 50%;
+        margin: 0;
+        padding: 20px 30px 30px 30px;
+        background-color: rgba(black, 0.85);
+        box-shadow: 0 0 20px rgba(black, 0.4);
+        color: white;
+        line-height: 1;
+        transition: 0.25s;
+        h3 {
+          margin: 0 0 20px;
+          padding: 0;
+          color: rebeccapurple;
+        }
+        p {
+          font-size: 14px;
+          line-height: 1.75;
+        }
+        button {
+          position: relative;
+          display: flex;
+          align-items: center;
+          justify-content: center;
+          margin: 10px 0 0;
+          padding: 10px 30px;
+          background-color: $color-2;
+          border: none;
+          border-radius: 5px;
+          color: white;
+          font-size: 14px;
+        }
+      }
+    }
+
+    *,
+    *:before,
+    *:after {
+      box-sizing: border-box;
+      outline: none;
     }
 
     &__project {
