--- a/about.scss
+++ b/about.scss
@@ -53,18 +53,11 @@
       justify-content: center;
     }
 
-    &__myImage {
-      width: 11rem;
-      box-shadow: -0.25rem 0.25rem #82385b;
-      border-radius: 0.6rem;
-    }
-
     &__p {
       font-family: "Oxanium";
-      text-align: justify;
       font-size: 1.4rem;
+      padding: 0;
       width: 50%;
-      padding: 2rem 1.3rem 1.3rem 2rem;
     }
 
     #blue-planet {
