--- a/styles.css
+++ b/styles.css
@@ -104,9 +104,9 @@ html {
   }
   .landing #big-planet {
     position: relative;
-    bottom: 24rem;
-    left: 33rem;
-    width: 45%;
+    bottom: 20rem;
+    left: 35rem;
+    width: 35%;
   }
 }
 .about {
@@ -158,17 +158,11 @@ html {
     display: flex;
     justify-content: center;
   }
-  .about__myImage {
-    width: 11rem;
-    box-shadow: -0.25rem 0.25rem #82385b;
-    border-radius: 0.6rem;
-  }
   .about__p {
     font-family: "Oxanium";
-    text-align: justify;
     font-size: 1.4rem;
+    padding: 0;
     width: 50%;
-    padding: 2rem 1.3rem 1.3rem 2rem;
   }
   .about #blue-planet {
     display: none;
@@ -341,6 +335,7 @@ html {
     margin-bottom: 2rem;
   }
   .work__projectCard {
+    font-family: Oxanium;
     margin: 0 auto;
     position: relative;
     display: flex;
@@ -372,7 +367,7 @@ html {
     left: 0;
     width: 100%;
     margin: 0;
-    padding: 20px 30px 30px 30px;
+    padding: 20px 30px 20px 30px;
     background-color: rgba(0, 0, 0, 0.85);
     box-shadow: 0 0 20px rgba(0, 0, 0, 0.4);
     color: white;
@@ -380,15 +375,16 @@ html {
     transition: 0.25s;
   }
   .work__projectCard--caption h3 {
-    margin: 0 0 20px;
+    margin-bottom: 10px;
     padding: 0;
-    color: rebeccapurple;
+    color: #99ffef;
   }
   .work__projectCard--caption p {
     font-size: 14px;
     line-height: 1.75;
   }
   .work__projectCard--caption button {
+    height: fit-content;
     position: relative;
     display: flex;
     align-items: center;
