--- a/work.scss
+++ b/work.scss
@@ -54,6 +54,7 @@ $lg: new-breakpoint(min-width 1024px);
     }
 
     &__projectCard {
+      font-family: Oxanium;
       margin: 0 auto;
       position: relative;
       display: flex;
@@ -85,22 +86,23 @@ $lg: new-breakpoint(min-width 1024px);
         width: 100%;
         //height: 50%;
         margin: 0;
-        padding: 20px 30px 30px 30px;
+        padding: 20px 30px 20px 30px;
         background-color: rgba(black, 0.85);
         box-shadow: 0 0 20px rgba(black, 0.4);
         color: white;
         line-height: 1;
         transition: 0.25s;
         h3 {
-          margin: 0 0 20px;
+          margin-bottom:10px;
           padding: 0;
-          color: rebeccapurple;
+          color: $color-highlight;
         }
         p {
           font-size: 14px;
           line-height: 1.75;
         }
         button {
+          height: fit-content;
           position: relative;
           display: flex;
           align-items: center;
