--- a/work.scss
+++ b/work.scss
@@ -54,7 +54,6 @@ $lg: new-breakpoint(min-width 1024px);
     }
 
     &__projectCard {
-      font-family: Oxanium;
       margin: 0 auto;
       position: relative;
       display: flex;
@@ -86,23 +85,22 @@ $lg: new-breakpoint(min-width 1024px);
         width: 100%;
         //height: 50%;
         margin: 0;
-        padding: 20px 30px 20px 30px;
+        padding: 20px 30px 30px 30px;
         background-color: rgba(black, 0.85);
         box-shadow: 0 0 20px rgba(black, 0.4);
         color: white;
         line-height: 1;
         transition: 0.25s;
         h3 {
-          margin-bottom:10px;
+          margin: 0 0 20px;
           padding: 0;
-          color: $color-highlight;
+          color: rebeccapurple;
         }
         p {
           font-size: 14px;
           line-height: 1.75;
         }
         button {
-          height: fit-content;
           position: relative;
           display: flex;
           align-items: center;
