--- a/about.scss
+++ b/about.scss
@@ -1,23 +1,15 @@
 .about {
-  text-align: center;
   width: 100%;
   margin: 0 auto;
   overflow: hidden;
 
   &__container {
     display: flex;
-    margin: 1rem 1rem 0 1rem;
+    flex-direction: column;
     justify-content: space-between;
   }
 
-  &__myImage {
-    width: 6rem;
-    box-shadow: -0.08rem 0.08rem #82385b;
-    border-radius: 0.3rem;
-  }
-
   &__p {
-    font-family: "Oxanium";
     text-align: justify;
     font-size: 0.7rem;
     width: 70%;
@@ -34,18 +26,17 @@
 
 @media screen and (min-device-width: 1024px) {
   .about {
-    overflow: visible;
-
     &__container {
-      display: flex;
-      justify-content: center;
+      justify-content: space-around;
+      align-items: center;
     }
 
     &__p {
-      font-family: "Oxanium";
+      position: relative;
       font-size: 1.4rem;
-      padding: 0;
-      width: 50%;
+      padding-top: 0;
+      width: 45%;
+      margin-bottom: 2vw;
     }
 
     #blue-planet {
