--- a/landing.scss
+++ b/landing.scss
@@ -1,9 +1,7 @@
 .landing {
   font-family: $font-display;
-
   display: flex;
   flex-direction: column;
-  text-align: center;
   width: 100%;
   overflow: hidden;
 
@@ -13,7 +11,6 @@
     text-shadow: -0.08rem 0.08rem black;
     margin-top: 9rem;
   }
-
 
   &__image {
     z-index: -1;
@@ -40,12 +37,6 @@
 
 @media screen and (min-device-width: 1024px) {
   .landing {
-    border: solid 1px red;
-    font-family: $font-display;
-    display: flex;
-    flex-direction: column;
-    text-align: center;
-    width: 100%;
     height: 100%;
     align-items: center;
     margin-bottom: 5%;
@@ -58,8 +49,7 @@
     }
 
     &__h2 {
-
-      margin-top: 1rem;
+      margin-top: 2vw;
     }
 
     #saturn-1 {
