--- a/tech.scss
+++ b/tech.scss
@@ -7,8 +7,7 @@
     font-size: 3.125rem;
     justify-content: center;
     align-items: center;
-    margin: 1rem auto 0 auto;
-    padding-bottom: 1rem;
+    margin: 0 auto;
   }
 
   &__icon {
@@ -18,36 +17,6 @@
     color: white;
     align-items: center;
     margin: 0 1rem;
-  }
-
-  #HTML:hover {
-    color: rgb(240, 101, 41);
-    transition: 0.2s;
-  }
-
-  #CSS:hover {
-    color: rgb(41, 101, 241);
-    transition: 0.2s;
-  }
-
-  #JavaScript:hover {
-    color: rgb(247, 224, 24);
-    transition: 0.2s;
-  }
-
-  #Sass:hover {
-    color: rgb(207, 100, 154);
-    transition: 0.2s;
-  }
-
-  #React:hover {
-    color: rgb(93, 208, 240);
-    transition: 0.2s;
-  }
-
-  #Java:hover {
-    color: rgb(237, 139, 0);
-    transition: 0.2s;
   }
 
   #blue-planet {
@@ -64,16 +33,13 @@
 
 @media screen and (min-device-width: 1024px) {
   .techStack {
-    margin-top: 10rem;
-    margin-bottom: -10rem;
+    margin-top: 10%;
+    margin-bottom: 10%;
 
     &__container {
       width: 50%;
-      margin-top: 32px;
-      display: flex;
       font-size: 4.5rem;
-      align-items: center;
-      padding-bottom: 1rem;
+      margin-bottom: 2vw;
     }
 
     &__icon {
@@ -83,46 +49,43 @@
       margin: 0 auto;
     }
 
+    i:hover,
+    img:hover {
+      transition: 0.2s;
+    }
+
     #HTML:hover {
       color: rgb(240, 101, 41);
-      transition: 0.2s;
     }
 
     #CSS:hover {
       color: rgb(41, 101, 241);
-      transition: 0.2s;
     }
 
     #JavaScript:hover {
       color: rgb(247, 224, 24);
-      transition: 0.2s;
     }
 
     #Sass:hover {
       color: rgb(207, 100, 154);
-      transition: 0.2s;
     }
 
     #React:hover {
       color: rgb(93, 208, 240);
-      transition: 0.2s;
     }
 
     #Java:hover {
       color: rgb(237, 139, 0);
-      transition: 0.2s;
     }
 
     #Spring:hover {
-      filter: brightness(0) saturate(100%) invert(62%) sepia(70%) saturate(395%)
-        hue-rotate(53deg) brightness(88%) contrast(86%);
-      transition: 0.2s;
+      filter: brightness(0) saturate(100%) invert(62%) sepia(70%) saturate(395%) hue-rotate(53deg)
+        brightness(88%) contrast(86%);
     }
 
     #mySQL:hover {
-      filter: brightness(0) saturate(100%) invert(31%) sepia(99%) saturate(687%)
-        hue-rotate(152deg) brightness(93%) contrast(101%);
-      transition: 0.2s;
+      filter: brightness(0) saturate(100%) invert(31%) sepia(99%) saturate(687%) hue-rotate(152deg)
+        brightness(93%) contrast(101%);
     }
 
     #blue-planet {
