--- a/landing.scss
+++ b/landing.scss
@@ -53,7 +53,7 @@
     }
 
     #saturn-1 {
-      display: flex;
+      display: inline;
       width: 20%;
       z-index: -2;
       position: absolute;
