--- a/styles.css
+++ b/styles.css
@@ -27,13 +27,40 @@ h2 {
   margin-bottom: 2vw;
 }
 
+h3 {
+  font-family: "Unica One", "sans-serif";
+  text-shadow: -0.1vw 0.1vw black;
+  letter-spacing: 0.6vw;
+}
+
+.pContainer {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
+}
+
 p {
   background-color: 0d2330;
+  font-size: 1.4rem;
+  padding-top: 0;
+  width: 45%;
+  margin-bottom: 2vw;
+  text-align: justify;
+}
+
+.titleP {
+  text-align: left;
+}
+
+.endP {
+  margin-bottom: 0;
 }
 
 a:link,
 a:visited {
   text-decoration: none;
+  cursor: pointer;
 }
 
 html {
@@ -88,7 +115,7 @@ html {
     margin-top: 2vw;
   }
   .landing #saturn-1 {
-    display: flex;
+    display: inline;
     width: 20%;
     z-index: -2;
     position: absolute;
@@ -106,11 +133,6 @@ html {
     left: 70%;
     width: 35%;
   }
-}
-.about {
-  width: 100%;
-  margin: 0 auto;
-  overflow: hidden;
 }
 .about__container {
   display: flex;
@@ -131,12 +153,7 @@ html {
 }
 
 @media screen and (min-device-width: 1024px) {
-  .about__container {
-    justify-content: space-around;
-    align-items: center;
-  }
   .about__p {
-    position: relative;
     font-size: 1.4rem;
     padding-top: 0;
     width: 45%;
@@ -178,7 +195,6 @@ html {
 @media screen and (min-device-width: 1024px) {
   .techStack {
     margin-top: 10%;
-    margin-bottom: 10%;
   }
   .techStack__container {
     width: 50%;
@@ -217,59 +233,57 @@ html {
     filter: brightness(0) saturate(100%) invert(62%) sepia(70%) saturate(395%) hue-rotate(53deg) brightness(88%) contrast(86%);
   }
   .techStack #mySQL:hover {
-    filter: brightness(0) saturate(100%) invert(31%) sepia(99%) saturate(687%) hue-rotate(152deg) brightness(93%) contrast(101%);
+    filter: brightness(0) saturate(100%) invert(39%) sepia(88%) saturate(412%) hue-rotate(143deg) brightness(93%) contrast(103%);
+  }
+  .techStack #gcp:hover {
+    filter: brightness(0) saturate(100%) invert(28%) sepia(80%) saturate(2174%) hue-rotate(-15deg) brightness(99%) contrast(86%);
+  }
+  .techStack #aws:hover {
+    filter: brightness(0) saturate(100%) invert(52%) sepia(88%) saturate(1470%) hue-rotate(3deg) brightness(109%) contrast(102%);
+  }
+  .techStack #postgresql:hover {
+    filter: brightness(0) saturate(100%) invert(39%) sepia(88%) saturate(412%) hue-rotate(143deg) brightness(93%) contrast(103%);
   }
   .techStack #blue-planet {
-    display: flex;
-    position: relative;
-    bottom: 10rem;
-    width: 28rem;
+    display: inline;
+    position: absolute;
+    top: 209%;
+    left: 1%;
+    width: 20%;
     z-index: -1;
   }
   .techStack #saturn-1 {
     display: none;
   }
 }
-.work {
-  display: flex;
-  flex-direction: column;
-}
-.work__project {
-  width: 60%;
-  height: 10rem;
-  background-color: rgba(255, 255, 255, 0.2);
-  margin: 0 auto 1rem auto;
-}
-.work__image {
-  position: relative;
-  top: 5rem;
-  left: 0.5rem;
-  width: 95%;
-  z-index: -1;
-  margin-top: -5rem;
-}
-
 @media screen and (min-device-width: 1024px) {
   .work {
+    margin-top: 10%;
+  }
+  .work__container {
     display: flex;
-    flex-direction: column;
+    margin: 0 auto;
+    align-items: center;
+    justify-content: flex-start;
+    flex-direction: row;
+    width: 45%;
   }
-  .work__project {
-    width: 60%;
-    height: 10rem;
-    background-color: rgba(255, 255, 255, 0.2);
-    margin: 0 auto 1rem auto;
+  .work__titleContainer {
+    margin-bottom: 1vw;
+    width: fit-content;
+    font-size: 2rem;
   }
-  .work__image {
-    position: relative;
-    top: 5rem;
-    left: 0.5rem;
-    width: 95%;
-    z-index: -1;
-    margin-top: -5rem;
+  .work__titleContainer i {
+    padding-left: 1vw;
+    font-size: 1.8rem;
+  }
+  .work__titleContainer:hover {
+    color: #11e9c9;
+    transition: 0.2s;
   }
 }
 .contact {
+  margin-top: 10%;
   margin-bottom: 1rem;
 }
 .contact__h2 {
