--- a/work.scss
+++ b/work.scss
@@ -1,43 +1,37 @@
 .work {
-  display: flex;
-  flex-direction: column;
-
-  &__project {
-    width: 60%;
-    height: 10rem;
-    background-color: rgba(255, 255, 255, 0.2);
-    margin: 0 auto 1rem auto;
-  }
-
-  &__image {
-    position: relative;
-    top: 5rem;
-    left: 0.5rem;
-    width: 95%;
-    z-index: -1;
-    margin-top: -5rem;
-  }
+  // display: flex;
+  // flex-direction: column;
 }
 
 @media screen and (min-device-width: 1024px) {
   .work {
-    display: flex;
-    flex-direction: column;
+    margin-top: 10%;
 
-    &__project {
-      width: 60%;
-      height: 10rem;
-      background-color: rgba(255, 255, 255, 0.2);
-      margin: 0 auto 1rem auto;
+    &__container {
+      display: flex;
+      margin: 0 auto;
+      align-items: center;
+      justify-content: flex-start;
+      flex-direction: row;
+
+      width: 45%;
     }
 
-    &__image {
-      position: relative;
-      top: 5rem;
-      left: 0.5rem;
-      width: 95%;
-      z-index: -1;
-      margin-top: -5rem;
+    &__titleContainer {
+      margin-bottom: 1vw;
+      width: fit-content;
+      font-size: 2rem;
+
+      i {
+        padding-left: 1vw;
+        font-size: 1.8rem;
+      }
+
+
+    }
+    &__titleContainer:hover {
+      color: $color-highlight;
+      transition: 0.2s;
     }
   }
 }
