--- a/contact.scss
+++ b/contact.scss
@@ -1,14 +1,10 @@
 .contact {
   margin-top: 10%;
-  margin-bottom: 1rem;
-
-  &__h2 {
-    margin: 1rem 0;
-  }
+  margin-bottom: 1vw;
 
   &__icon {
     color: white;
-    margin: 0 1.2rem;
+    margin: 0 1.2vw;
     font-size: 3.125rem;
   }
 
