--- a/work.scss
+++ b/work.scss
@@ -1,8 +1,3 @@
-.work {
-  // display: flex;
-  // flex-direction: column;
-}
-
 @media screen and (min-device-width: 1024px) {
   .work {
     margin-top: 10%;
@@ -22,6 +17,7 @@
       i {
         padding-left: 1vw;
         font-size: 1.8rem;
+        text-shadow: -0.1vw 0.1vw black;
       }
     }
     &__titleContainer:hover {
