--- a/base.scss
+++ b/base.scss
@@ -32,7 +32,6 @@ h3 {
   font-family: $font-display;
   text-shadow: -0.1vw 0.1vw black;
   letter-spacing: 0.6vw;
-
 }
 
 .pContainer {
@@ -59,8 +58,11 @@ p {
   margin-bottom: 0;
 }
 
-a:link,
-a:visited {
+a,
+a:visited,
+a:hover,
+a:active {
+  color: inherit;
   text-decoration: none;
   cursor: pointer;
 }
