--- a/styles.css
+++ b/styles.css
@@ -57,8 +57,11 @@ p {
   margin-bottom: 0;
 }
 
-a:link,
-a:visited {
+a,
+a:visited,
+a:hover,
+a:active {
+  color: inherit;
   text-decoration: none;
   cursor: pointer;
 }
@@ -274,6 +277,7 @@ html {
   .work__titleContainer i {
     padding-left: 1vw;
     font-size: 1.8rem;
+    text-shadow: -0.1vw 0.1vw black;
   }
   .work__titleContainer:hover {
     color: #11e9c9;
@@ -282,14 +286,11 @@ html {
 }
 .contact {
   margin-top: 10%;
-  margin-bottom: 1rem;
-}
-.contact__h2 {
-  margin: 1rem 0;
+  margin-bottom: 1vw;
 }
 .contact__icon {
   color: white;
-  margin: 0 1.2rem;
+  margin: 0 1.2vw;
   font-size: 3.125rem;
 }
 .contact__icon:hover {
