--- a/styles.css
+++ b/styles.css
@@ -244,7 +244,7 @@ html {
     filter: brightness(0) saturate(100%) invert(28%) sepia(80%) saturate(2174%) hue-rotate(-15deg) brightness(99%) contrast(86%);
   }
   .techStack #aws:hover {
-    filter: brightness(0) saturate(100%) invert(52%) sepia(88%) saturate(1470%) hue-rotate(3deg) brightness(109%) contrast(102%);
+    color: #ff9900;
   }
   .techStack #postgresql:hover {
     filter: brightness(0) saturate(100%) invert(39%) sepia(88%) saturate(412%) hue-rotate(143deg) brightness(93%) contrast(103%);
