--- a/tech.scss
+++ b/tech.scss
@@ -95,8 +95,7 @@
     }
 
     #aws:hover {
-      filter: brightness(0) saturate(100%) invert(52%) sepia(88%) saturate(1470%) hue-rotate(3deg)
-        brightness(109%) contrast(102%);
+      color: rgb(255, 153, 0);
     }
 
     #postgresql:hover {
